libstream-more-perl (0.6.12) UNRELEASED; urgency=low

  * Stream::Unrotate removed
  * Stream::Simple: memory_storage() prototype fixed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 30 Nov 2010 20:43:39 +0300

libstream-more-perl (0.6.11) unstable; urgency=low

  * Stream::In::DiskBuffer and Stream::Queue::In now implement lag method

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 23:09:54 +0300

libstream-more-perl (0.6.10) unstable; urgency=low

  * hotfix: deadlocks in Stream::In::DiskBuffer fixed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 18:14:10 +0300

libstream-more-perl (0.6.9) unstable; urgency=low

  * Stream::Propagate: explicit Content-Type: text/plain

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 28 Oct 2010 16:08:19 +0400

libstream-more-perl (0.6.8) unstable; urgency=low

  * Stream::In::DiskBuffer implemented
  * Stream::Queue:
   - rewritten to use DiskBuffer
   - storage version bumped, all processes should die and restart automatically
   - implement Stream::Storage::Role::ClientList

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 04 Oct 2010 22:27:35 +0400

libstream-more-perl (0.6.7) unstable; urgency=low

  * force dependency on fresh core streams
  * Concat and MemoryStorage fixes

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 16 Aug 2010 20:29:36 +0400

libstream-more-perl (0.6.6) unstable; urgency=low

  * Stream::MemoryStorage implemented
  * several Test::Class-based Stream::Test::* modules
  * Stream::Concat implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 16 Aug 2010 19:34:10 +0400

libstream-more-perl (0.6.5) unstable; urgency=low

  * Stream::Formatter::JSON: don't quote json twice; key renamed to 'data2' to
    keep backward compatibility
