@@ -3,7 +3,8 @@
 use strict;
 use warnings;
 
-use Test::More tests => 11;
+use parent qw(Test::Class);
+use Test::More;
 use Test::Exception;
 
 use lib 'lib';
@@ -12,8 +13,7 @@ use Stream::Out::Any;
 use Stream::Simple qw(array_seq);
 use Streams;
 
-# 4
-{
+sub balance_three :Test(4) {
     my @v;
 
     my $in = array_seq([ 5..15 ]);
@@ -39,8 +39,7 @@ use Streams;
     }
 }
 
-# 3
-{
+sub balance_two :Test(3) {
     my @v;
 
     my $in = array_seq([ 5..15 ]);
@@ -69,8 +68,7 @@ use Streams;
     }
 }
 
-# 3
-{
+sub invalidate :Test(3) {
     {
         package t::Stream;
         use base qw(Stream::Out);
@@ -105,7 +103,7 @@ use Streams;
     }
 }
 
-{
+sub invalidate_all :Test(1) {
     my $out = Stream::Out::Any->new([
         (processor(sub { die })) x 3
     ]);
@@ -113,3 +111,38 @@ use Streams;
         $out->write(1);
     }, 'write in Any stream when all targets are invalid throws exception');
 }
+
+sub revalidate :Test(3) {
+    {
+        package t::RevStream;
+        use parent qw(Stream::Out);
+        our $flag;
+        sub new {
+            bless { data => $_[1] } => $_[0];
+        }
+        sub write {
+            die unless $t::RevStream::flag++;
+            push @{ $_[0]->{data} }, $_[1];
+        }
+    }
+    my @data;
+    my @data_rev;
+    my $out = Stream::Out::Any->new([
+        processor(sub { push @data, shift }),
+        t::RevStream->new(\@data_rev),
+    ], {
+        revalidate => 2,
+    });
+
+    $out->write($_) for 'a'..'e';
+    sleep 1;
+    $out->write($_) for 'f'..'h';
+    sleep 2;
+    $out->write($_) for 'i'..'z';
+
+    like(join('', @data), qr/^abcdefgh/, 'first 8 items went to good stream, rev stream was broken');
+    is(scalar(@data_rev), 9, 'remaining items were distributed proportionally');
+    is(scalar(@data), 8 + 9);
+}
+
+__PACKAGE__->new->runtests;
