@@ -2,6 +2,7 @@ libstream-more-perl (0.6.12) UNRELEASED; urgency=low
 
   * Stream::Unrotate removed
   * Stream::Simple: memory_storage() prototype fixed
+  * Stream::Out::Any: 'revalidate' option implemented
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 30 Nov 2010 20:43:39 +0300
 
